# pytest-simplehttpserver

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg  setup.py  tox.ini
pytest-simplehttpserver/: simplehttpserver.py
pytest_simplehttpserver/: pytest_plugin.py  simplehttpserver.py
src/pytest_simplehttpserver/: pytest_plugin.py  simplehttpserver.py
tests/: test_plugin.py  test_server.py  test_simplehttpserver.py
