[metadata]
name=pytest_simplehttpserver
version=0.1.332
author=Pablo Prieto Montes de Oca
author_email=pabloprieto@live.com
maintainer=Pablo Prieto Montes de Oca
maintainer_email=pabloprieto@live.com
license=MIT
url=https://github.com/ppmdo/pytest-simplehttpserver
description=Simple fixture to spin up an HTTP server to serve static files for testing
long_description=file: README.md
long_description_content_type = text/markdown
install_requires=[pytest>=3.5.0]
classifiers=
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires=>=3.5

[options.entry_points]
pytest11 =
    simplehttpserver = pytest_simplehttpserver.pytest_plugin

[options.packages.find]
where = src